# grovedb-proof-visualizer-widget

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/grovedb-proof-view/: Cargo.toml
crates/grovedb-proof-view-wasm/: Cargo.toml
crates/grovedb-proof-view-wasm/src/: lib.rs
crates/grovedb-proof-view/examples/: dump_proof.rs  dump_schema.rs  synth_fixture.rs  synth_hex.rs
crates/grovedb-proof-view/src/: bytes.rs  element.rs  error.rs  ir.rs  lib.rs  schema.rs  text.rs
crates/grovedb-proof-view/tests/: roundtrip.rs  text_roundtrip.rs
crates/grovedb-proof-view/tests/fixtures/: query3_color_eq.txt
crates/mdbook-grovedb-proof/: Cargo.toml
crates/mdbook-grovedb-proof/src/: main.rs
examples/fixtures/: query1_count.json
prompts/: link-from-platform-book.md
scripts/: build-site.sh  build-wasm.sh  serve.mjs
site/: app.css  app.js  index.html  share.js
