[workspace]
resolver = "2"
members = [
    "crates/grovedb-proof-view",
    "crates/grovedb-proof-view-wasm",
    "crates/mdbook-grovedb-proof",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dash Platform Team"]
repository = "https://github.com/dashpay/proof-visualizer-widget"

[workspace.dependencies]
# GroveDB pinned to the same revision the Dash Platform v3.1-dev branch is on.
# Bump in lockstep with the platform Cargo.lock entry.
grovedb = { git = "https://github.com/dashpay/grovedb", rev = "a917d92d2477672eed73c4c08e53e93449a6a094", default-features = false, features = ["verify", "serde"] }
grovedb-element = { git = "https://github.com/dashpay/grovedb", rev = "a917d92d2477672eed73c4c08e53e93449a6a094" }
grovedb-version = { git = "https://github.com/dashpay/grovedb", rev = "a917d92d2477672eed73c4c08e53e93449a6a094" }
grovedb-merk = { git = "https://github.com/dashpay/grovedb", rev = "a917d92d2477672eed73c4c08e53e93449a6a094", default-features = false, features = ["verify"] }
grovedb-query = { git = "https://github.com/dashpay/grovedb", rev = "a917d92d2477672eed73c4c08e53e93449a6a094" }

bincode = "=2.0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nom = "7"
