[package]
name = "grovedb-proof-view"
description = "Render-friendly intermediate representation for GroveDB proofs, with parsers from raw bytes, the Display string, and JSON."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
grovedb = { workspace = true }
grovedb-element = { workspace = true }
grovedb-version = { workspace = true }
grovedb-merk = { workspace = true }
grovedb-query = { workspace = true }

bincode = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }

[features]
default = ["text-parser", "schema"]
text-parser = []
schema = []

[dev-dependencies]
serde_json = { workspace = true }
